--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: game_parking
+version: 0.1.0
 author: Dzenan Ridjanovic <dzenanr@gmail.com>
+description: Game Parking is a version of the Rush Hour game. dartling is a domain model framework for web applications.
 homepage: http://ondart.me/
-version: 0.0.8
-description: >
-  Dartling is a domain model framework for web application prototypes.
-  A new dartling project is copied and adapted from dartling_skeleton.
 dependencies:
+  dartling_default_app:
+    git: git://github.com/dzenanr/dartling_default_app.git
   browser: any
   dartling:
     git: git://github.com/dzenanr/dartling.git
