--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,9 +5,9 @@ description: Game Parking is a version of the Rush Hour game. dartling is a doma
 homepage: http://ondart.me/
 documentation: http://goo.gl/LDhRwm
 environment:
-  sdk: '>=0.8.10+8 <2.0.0'
+  sdk: '>=1.2.0 <2.0.0'
 dependencies:
-  browser: '>=0.9.0 <0.10.0'
+  browser: '>=0.10.0 <0.11.0'
   dartling:
-    git: 'https://github.com/dzenanr/dartling.git'
-    version: '>=2.0.0 <3.0.0'
+    git: https://github.com/dzenanr/dartling.git
+
