--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,5 +7,6 @@ documentation: http://goo.gl/LDhRwm
 dependencies:
   browser: any
   dartling:
-    git: https://github.com/dzenanr/dartling.git
+    git: git://github.com/dzenanr/dartling.git
+
 
